kubernetes/apps/www/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
  namespace: www
  annotations:
    argocd.argoproj.io/sync-wave: "20"
    argocd-image-updater.argoproj.io/image-list: www=ghcr.io/fapiper/fabianpiper.com/www
    argocd-image-updater.argoproj.io/www.update-strategy: latest
    argocd-image-updater.argoproj.io/www.allow-tags: regexp:^latest$
    argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/argocd-image-updater-github-creds
spec:
  replicas: 2
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      labels:
        app: www
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: www
          image: ghcr.io/fapiper/fabianpiper.com/www:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
