kubernetes/apps/www/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: www
  namespace: www
spec:
  selector:
    app: www
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
